modify header style

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,73 +1,76 @@
-* {
-    box-sizing: border-box;
-    margin:0;
-    padding:0;
-}
-
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    margin-top:34px;
-    align-items: center;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
     overflow: hidden;
 }
-#main-nav {
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+
+li {
+    float: left;
 }
 
-.nav-links  {
-    margin-right: 60px;
-    height: 22px;
+li a {
+    display: block;
+    padding: 45px 60px 36px 0;
+    text-decoration: none;
     color: #000000;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 900;
     line-height: 22px;
+    text-align: center;
 }
 
 #logo {
-    margin-right: 744px;
-    margin-left: 37.49px;
+    padding: 34px 744px 36px 37.49px;
+    float: left;  
 }
 
-.nav-links,
-#logo {
-    text-decoration: none;
-}
+@media only screen and (max-width: 1024px) {
+    ul {
+        overflow: auto;
+        white-space: nowrap;
 
-@media only screen and (max-width:1024px) {
-    .navbar {
-        overflow: scroll;
-    } 
+    }
+
+    ul li {
+        display: inline-block;
+    }
+
+    li {
+        float: none;
+    }
+
     #logo {
-        margin-right: 244px;
-    }
-   
-}
-@media only screen and (max-width:768px) {
-    .nav-links{
-        font-size:14px;
-        margin-right:20px;
+        padding-right: 644px;
     }
 }
+
+@media only screen and (max-width: 768px) {
+    #logo {
+        padding-right: 444px;
+    }
+}
+
 @media only screen and (max-width: 414px) {
+    li a {
+        font-size: 14px;
+    }
+
     #logo {
-        margin-right: 180px;
+        padding-right: 155px;
     }
 }
 
 @media only screen and (max-width: 375px) {
     #logo {
-        margin-right: 140px;
+        padding-right: 145px;
     }
 }
 
 @media only screen and (max-width: 320px) {
     #logo {
-        margin-right: 120px;
+        padding-right: 115px;
     }
 }
 
