add initial content for the screenshot section

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -14,6 +14,11 @@
     background-size: 100% 600px;
 }
 
+.screenshot {
+    background: url("../Img/product_section_background.png");
+    background-repeat: no-repeat;
+    background-size: 100% 853px;
+}
 /* Main tags */
 h1, h2,
 p {
@@ -134,6 +139,31 @@ img {
     line-height: 24px;
     margin-top:16px;
     margin-bottom:69px;
+}
+/* news details */
+#screenshot-header {
+    height: 88px;	
+    width: 400px;	
+    color: #000000;	
+    font-family: 'Montserrat';	
+    font-size: 36px;	
+    font-weight: bold;	
+    line-height: 44px;
+    margin-left:137px;
+    margin-top:153px;
+    text-align:left;
+}
+#screenshot-details {
+    height: 168px;
+    width: 371px;
+    color: #FFFFFF;
+    font-family: 'Roboto';
+    font-size: 18px;
+    line-height: 24px;
+    margin-left:137px;
+    margin-top:24px;
+    margin-bottom: 110px;
+    text-align:left;
 }
 
  /* reponsiveness to other devices */
