rename comment section on content css file

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -140,7 +140,7 @@ img {
     margin-top:16px;
     margin-bottom:69px;
 }
-/* news details */
+/* screenshot details */
 #screenshot-header {
     height: 88px;	
     width: 400px;	
