--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -1,14 +1,16 @@
-/* sections */
- section {
-     position: relative;
-     overflow: hidden;
- }
+/* Sections */
+
+section {
+    position: relative;
+    overflow: hidden;
+}
+
 .intro {
     background: url('../Img/header_image_provide.png');
     background-repeat: no-repeat;
     background-size: 100% 853px;
-    padding-bottom: 87px;
 }
+
 .feature-section {
     background-color: #E3EAFA;
     background-size: 100% 600px;
@@ -19,88 +21,98 @@
     background-repeat: no-repeat;
     background-size: 100% 853px;
 }
+
 .use-cases {
     background: url("../Img/use_section_background.png");
     background-repeat: no-repeat;
-    background-size: 100% 500px;
+    background-size: 100% 893px;
 }
-.ceo-info {
+
+.cio-info {
     background: url("../Img/footer_image_provide.png");
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 100% 783px;
     height: 783px;
 }
-.ceo-info-section {
+
+.cio-info-section {
     height: 228px;
     width: 100%;
     opacity: 0.8;
     background-color: #E3EAFA;
     display: flex;
 }
+
 .footer {
     border: 1px solid #979797;
     background-color: #0E142E;
     height: 255px;
     width: 100%;
 }
+
 /* Main Tags */
-h1, h2,
+
+h1,
+h2,
 p {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
 }
+
 /* Intro Details */
+
 #intro-header {
     color: #ffffff;
     line-height: 44px;
     font-family: 'Montserrat';
-    font-size:36px;
-    font-weight:  bolder;
-    width:733px;
+    font-size: 36px;
+    font-weight: bolder;
+    width: 733px;
     height: 36px;
-    margin-top:64px;
+    margin-top: 64px;
 }
 
 #intro-details {
     color: #ffffff;
     font-size: 28px;
     font-family: 'Roboto';
-    font-weight:300;
-    line-height:38px;
+    font-weight: 300;
+    line-height: 38px;
     width: 762px;
     height: 44px;
-    margin-top:16px;
-
+    margin-top: 16px;
 }
 
-#intro-logo{
+#intro-logo {
     display: block;
     margin-top: 165px;
     margin-left: auto;
-    margin-right: auto;   
+    margin-right: auto;
     width: 426px;
     height: 110px;
 }
 
 #sign-up {
-    color: #E3EAFA;	
+    color: #E3EAFA;
     font-family: 'Montserrat';
-    font-size: 24px;	
-    font-weight: 900;	
-    line-height: 36px;	
+    font-size: 24px;
+    font-weight: 900;
+    line-height: 36px;
     text-align: center;
     width: 256px;
     height: 72px;
     border: #0E142E;
-	border-radius: 36px;
+    border-radius: 36px;
     background-color: #0E142E;
-    margin-left:44%;
-    margin-top:80px;
+    margin-left: 44%;
+    margin-top: 80px;
+    margin-bottom: 87px;
     cursor: pointer;
 }
 
 /* Features Details */
+
 #feature-header {
     color: #02A2E0;
     height: 58px;
@@ -109,18 +121,20 @@ p {
     font-size: 48px;
     font-weight: bolder;
     line-height: 58px;
-    margin-top:64px;
+    margin-top: 64px;
 }
+
 #feature-details {
-    height: 74px;	
-    width: 762px;	
-    color: #0E142E;	
-    font-family: 'Roboto';	
-    font-size: 28px;	
+    height: 74px;
+    width: 762px;
+    color: #0E142E;
+    font-family: 'Roboto';
+    font-size: 28px;
     line-height: 37px;
-    margin-top:12px;	
+    margin-top: 12px;
 }
-.feature-items-container{
+
+.feature-items-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -128,32 +142,36 @@ p {
     height: 100%;
     width: 100%;
 }
+
 .feature-items-container div {
     max-height: 100%;
     max-width: 100%;
 }
+
 img {
     max-height: 100%;
     max-width: 100%;
     display: block;
     margin: auto;
 }
-.feature-item-img  {
+
+.feature-item-img {
     height: 96.07px;
     width: 90px;
-    margin-top:61px;
+    margin-top: 61px;
 }
+
 .feature-item-title {
-    height: 44px;	
-    width: 142px;	
-    color: #000000;	
-    font-family: 'Montserrat';	
-    font-size: 36px;	
-    font-weight: 600;	
-    line-height: 44px;	
-    margin-top:33.93px;
-    
+    height: 44px;
+    width: 142px;
+    color: #000000;
+    font-family: 'Montserrat';
+    font-size: 36px;
+    font-weight: 600;
+    line-height: 44px;
+    margin-top: 33.93px;
 }
+
 .feature-item-details {
     height: 72px;
     width: 239px;
@@ -161,22 +179,25 @@ img {
     font-family: 'Roboto';
     font-size: 18px;
     line-height: 24px;
-    margin-top:16px;
-    margin-bottom:69px;
+    margin-top: 16px;
+    margin-bottom: 69px;
 }
+
 /* Screenshot Details */
+
 #screenshot-header {
-    height: 88px;	
-    width: 400px;	
-    color: #000000;	
-    font-family: 'Montserrat';	
-    font-size: 36px;	
-    font-weight: bold;	
+    height: 88px;
+    width: 400px;
+    color: #000000;
+    font-family: 'Montserrat';
+    font-size: 36px;
+    font-weight: bolder;
     line-height: 44px;
-    margin-left:137px;
-    margin-top:153px;
-    text-align:left;
+    margin-left: 137px;
+    margin-top: 153px;
+    text-align: left;
 }
+
 #screenshot-details {
     height: 168px;
     width: 371px;
@@ -184,50 +205,57 @@ img {
     font-family: 'Roboto';
     font-size: 18px;
     line-height: 24px;
-    margin-left:137px;
-    margin-top:24px;
+    margin-left: 137px;
+    margin-top: 24px;
     margin-bottom: 110px;
-    text-align:left;
+    text-align: left;
 }
+
 .screenshot-container {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
 }
-#slideshow-container{
+
+#slideshow-container {
     margin-right: 128px;
     margin-top: 72px;
     margin-bottom: 31px;
 }
+
 /* Use Cases Section */
-  #use-cases-header{
-    height: 58px;	
-    width: 247px;	
-    color: #02A2E0;	
-    font-family: 'Montserrat';	
-    font-size: 48px;	
-    font-weight: bold;	
-    line-height: 58px;	
-    margin-top:152px;
-    margin-left:164px;
-  }
-  #use-cases-details {
-    height: 120px;	
-    width: 338px;	
-    color: #FFFFFF;	
-    font-family: 'Roboto';	
-    font-size: 18px;	
+
+#use-cases-header {
+    height: 58px;
+    width: 247px;
+    color: #02A2E0;
+    font-family: 'Montserrat';
+    font-size: 48px;
+    font-weight: bolder;
+    line-height: 58px;
+    margin-top: 152px;
+    margin-left: 164px;
+}
+
+#use-cases-details {
+    height: 120px;
+    width: 338px;
+    color: #FFFFFF;
+    font-family: 'Roboto';
+    font-size: 18px;
     line-height: 24px;
     text-align: left;
     margin-top: 21px;
     margin-left: 164px;
-  }
-  #use-cases-item-img{
+}
+
+#use-cases-item-img {
     height: 81.25px;
     width: 79.92px;
-  }
-  .use-cases-item-details{
+}
+
+.use-cases-item-details {
     height: 48px;
     width: 403px;
     color: #FFFFFF;
@@ -236,34 +264,39 @@ img {
     line-height: 24px;
     text-align: left;
     margin-left: 40.21px;
-  }
-  .use-cases-container {
+}
+
+.use-cases-container {
     display: flex;
-    flex-wrap: wrap;
-  }
-  .use-cases-items-container{
+    justify-content: space-evenly;
+    flex-wrap: nowrap;
+}
+
+.use-cases-items-container {
     margin-top: 73.04px;
-    margin-right:91px;
-  }
-  .use-cases-item-container{
-    margin-bottom:56.36px;
+}
+
+.use-cases-item-container {
+    margin-bottom: 56.36px;
     margin-left: 164.15px;
     display: flex;
     justify-content: row;
-  }
-  /* CEO Info Section */
-  #pic-container{
-    box-sizing: border-box;	
-    height: 101px;	
-    width: 101px;	
-    border: 1px solid #979797;
-    border-radius: 50%;	
-    background-color: #D8D8D8;
-    margin-left:281.5px;
-    margin-top: 63.5px;
+}
 
-  }
-  #ceo-bio {
+/* CIO Info Section */
+
+#pic-container {
+    box-sizing: border-box;
+    height: 101px;
+    width: 101px;
+    border: 1px solid #979797;
+    border-radius: 50%;
+    background-color: #D8D8D8;
+    margin-left: 281.5px;
+    margin-top: 63.5px;
+}
+
+#cio-bio {
     height: 42px;
     width: 584px;
     color: #0E142E;
@@ -273,8 +306,9 @@ img {
     text-align: left;
     margin-top: 78px;
     margin-left: 31.5px;
-  }
-  #ceo-name {
+}
+
+#cio-name {
     height: 19px;
     width: 242px;
     color: #0E142E;
@@ -283,19 +317,22 @@ img {
     line-height: 19px;
     text-align: left;
     margin-left: 31.5px;
+}
 
-  }
-  /* Footer Section */
-  .footer-info-container {
+/* Footer Section */
+
+.footer-info-container {
     display: flex;
-  }
-  #footer-logo {
-    width:200px;
+}
+
+#footer-logo {
+    width: 200px;
     height: 52px;
-    margin-top:36px;
+    margin-top: 36px;
     margin-left: 64px;
-  }
-  #address-details  {
+}
+
+#address-details {
     height: 66px;
     width: 230px;
     color: #FFFFFF;
@@ -303,67 +340,196 @@ img {
     font-size: 14px;
     line-height: 22px;
     text-align: left;
-    margin-top:31px;
-    margin-left:456px;
-    margin-right:24px;
-  }
-  .social-media-links {
-    margin-left:48px;
+    margin-top: 31px;
+    margin-left: 456px;
+    margin-right: 24px;
+}
+
+.social-media-links {
+    margin-left: 48px;
     margin-top: 24px;
     text-align: left;
     justify-content: column;
-  }
-  #divider {
+}
+
+#divider {
     height: 80px;
     width: 1px;
     background-color: #34394F;
-    margin-top:24px;
+    margin-top: 24px;
     margin-left: 24px;
-      
-  }
-  .link-icon {
-    font-size:20px;
-    margin-right:20px;
+}
+
+.link-icon {
+    font-size: 20px;
+    margin-right: 20px;
     color: #FFFFFF;
     cursor: pointer;
-  }
-  .link-text {
+}
+
+.link-text {
     color: #FFFFFF;
     font-family: 'Roboto';
     font-size: 14px;
     line-height: 19px;
     cursor: pointer;
-  }
- i {
-    margin-bottom:12px;
-  }
-  #copy-rights{
+}
+
+i {
+    margin-bottom: 12px;
+}
+
+#copy-rights {
     color: #FFFFFF;
     font-family: 'Roboto';
     font-size: 14px;
     line-height: 19px;
-    margin-top:64px;
-  }
-
-
- /* reponsiveness to other devices */
- @media only screen and (max-width: 1024px) {
-
- }
-
- @media only screen and (max-width: 768px) {
-     
- }
-
- @media only screen and (max-width: 414px) {
-       
-        
- }
-
-@media only screen and (max-width: 375px) {
-
+    margin-top: 64px;
 }
 
-@media only screen and (max-width: 320px) {
-               
+
+/* reponsiveness to other devices */
+
+
+@media only screen and (max-width: 1262px) {
+    /* footer adjustments */
+    #address-details {
+        margin-left: 100px;
+    }
 }
+
+@media only screen and (max-width: 1186px) {
+    /* screenshot adjustments */
+    .screenshot-container {
+        flex-wrap: nowrap;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    #screenshot-header {
+        margin-top: 20px;
+        margin-left: 80px;
+    }
+    #screenshot-details {
+        margin-left: 80px;
+    }
+    #slideshow-container {
+        margin-left: 70px;
+    }
+    /* use cases adjustments */
+    .use-cases-container {
+        flex-wrap: nowrap;
+    }
+    #use-cases-header {
+        margin-left: 55px;
+    }
+    #use-cases-details {
+        margin-left: 80px;
+    }
+    .use-cases-item-details {
+        height: 48px;
+        width: 290px;
+    }
+    .use-cases-container {
+        flex-wrap: nowrap;
+    }
+    /* footer adjustments */
+    .cio-info {
+        height: 600px;
+    }
+    #pic-container {
+        margin-left: 100px;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    /* intro adjustments */
+    #sign-up {
+        margin-left: 40%;
+    }
+    /* screenshot adjustments */
+    #slideshow-container {
+        margin-left: 20px;
+    }
+    /* use cases adjustments */
+    .use-cases-item-details {
+        height: 48px;
+        width: 210px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    /* intro adjustments */
+    #sign-up {
+        margin-left: 35%;
+    }
+    /* feature adjustments */
+    #feature-header {
+        height: 48px;
+        width: 750px;
+        margin-bottom: 80px;
+    }
+    .feature-item-details {
+        width: 210px;
+    }
+    /* screenshot adjusments */
+    .screenshot-container {
+        flex-wrap: wrap;
+        margin: 0;
+    }
+    #screenshot-header {
+        margin-top: 60px;
+        margin-left: 160px;
+    }
+    #screenshot-details {
+        margin-left: 160px;
+        margin-bottom: 0px;
+    }
+    #slideshow-container {
+        margin-left: 160px;
+        margin-top: 0;
+        margin-bottom: 60px;
+    }
+    /* use cases adjustments */
+    #use-cases-header {
+        width: 260px;
+        margin-top: 60px;
+    }
+    #use-cases-details {
+        width: 430px
+    }
+    .use-cases-container {
+        flex-wrap: wrap;
+    }
+    .use-cases-items-container {
+        margin-right: 150px;
+        margin-bottom: 60px;
+    }
+    .use-cases-item-details {
+        height: 48px;
+        width: 300px;
+    }
+    /* cio adjustments */
+    #pic-container {
+        margin-left: 50px;
+    }
+    #cio-bio {
+        width: 500px;
+    }
+    #cio-name {
+        width: 200px;
+        margin-top: 30px;
+    }
+    /* footer adjustments */
+    #address-details {
+        margin-left: 106px;
+    }
+    .link-text {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 414px) {}
+
+@media only screen and (max-width: 375px) {}
+
+@media only screen and (max-width: 320px) {}
