remove news link and add team link plus set up all links

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -59,6 +59,9 @@ li a {
     #logo {
         padding-right: 155px;
     }
+    #team-link {
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 375px) {
