--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -27,7 +27,12 @@ section {
     background-repeat: no-repeat;
     background-size: 100% 893px;
 }
-
+.team-main-container {
+    background: url("../Img/product_section_background.png");
+    background-repeat: no-repeat;
+    background-size: 100% 550px;
+    height:550px;
+}
 .cio-info {
     background: url("../Img/footer_image_provide.png");
     background-repeat: no-repeat;
@@ -282,7 +287,122 @@ img {
     display: flex;
     justify-content: row;
 }
+/* Team and Advisors Section */
+.team-advisors-section {
+    display: flex;
+}
+.team-main-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.header-container {
+   margin-right: 800px;
+}
+.team-container-1{
+    display:flex;
+    flex-wrap: nowrap;
+    margin-right: 75px;
+}
+.team-container-2{
+    display: flex;
+    flex-wrap: nowrap;
+    margin-right:75px;
+    margin-bottom:58px;
+}
+#team-header {
+    color: #0E142E;
+    font-family: 'Montserrat';
+    font-size: 36px;
+    font-weight: bolder;
+    line-height: 44px;
+    margin-left: 52px;
+  }
 
+.team-member-details{
+    margin-right:66px;
+    margin-bottom:35px;
+}
+.team-member-details-2 {
+    margin-right: 75px;
+    justify-content: center;
+}
+ .team-member-img {
+    height: 136px;
+    width: 136px;
+ }
+ .team-member-img-row-2{
+    height:90px;
+    width:90px;
+ }
+ .team-member-name {
+    color:#ffffff;	 
+    font-family: 'Roboto';	
+    font-size: 14px;	
+    font-weight: bold;	
+    line-height: 19px;	
+    text-align: center;
+    margin-top:11px;
+ }
+ .team-member-title {
+    color: #0E142E;
+    font-family: 'Roboto';
+    font-size: 14px;
+    line-height: 19px;
+    margin-top:4px;
+ }
+ .advisors-main-container {
+    background-color: #02A2E0;
+    height: 550px;
+    float: right;
+    display: flex;
+    flex-wrap: wrap;
+    width:383px;
+
+ }
+ .advisors-container{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 57px;
+ }
+
+ #advisors-header{
+    color: #E3EAFA;	
+    font-family:'Montserrat';	
+    font-size: 36px;	
+    font-weight: bolder;	
+    line-height: 44px;
+    margin-top:36px;
+    margin-left:36px;
+    margin-right:199px;
+    margin-bottom: 24px;
+}
+.advisor-member-details {
+    margin-right: 31px;
+}
+.advisor-member-img {
+    height:60px;
+    width:60px;
+}
+.advisor-member-name {	
+    color: #FFFFFF;	
+    font-family: 'Roboto';	
+    font-size: 14px;	
+    font-weight: bolder;	
+    line-height: 19px;	
+    text-align: center;
+    margin-bottom:-12px;
+}
+.advisor-member-title{
+    color: #FFFFFF;	
+    font-family: 'Roboto';	
+    font-size: 14px;	
+    font-weight: 500;	
+    line-height: 19px;
+    text-align: left;
+}
 /* CIO Info Section */
 
 #pic-container {
@@ -529,7 +649,11 @@ i {
     }
 }
 
-@media only screen and (max-width: 414px) {}
+@media only screen and (max-width: 414px) {
+    .team-advisors-section{
+        display: none;
+    }
+}
 
 @media only screen and (max-width: 375px) {}
 
