--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,4 @@
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -11,11 +12,12 @@ li {
 }
 
 .links {
-    margin-top: 57px;
-    margin-left: 940px;
-    margin-right: 0;
-    margin-bottom: 0;
     display: flex;
+    justify-content: flex-end;
+    margin-top: 57px;
+    margin-left: auto;
+    margin-right: 37.49px;
+    margin-bottom: 0;
     flex-wrap: nowrap;
 }
 
@@ -62,22 +64,22 @@ li a {
 
 @media only screen and (max-width: 1024px) {
     .links {
-        margin-left: 507px;
+        margin-left: auto;
     }
 }
 
 @media only screen and (max-width: 768px) {
     .links {
         margin-top: 58px;
-        margin-left: 407px;
+        margin-left: 900px;
+        margin-right:0;
     }
 }
 
 @media only screen and (max-width: 414px) {
     .links {
-        margin-top: 33pt;
-        margin-right: 55pt;
-        margin-left: 0;
+        margin-right: 0;
+        margin-left: 750pt;
         margin-bottom: 0;
 
     }
@@ -103,8 +105,8 @@ li a {
     }
 
     #logo img {
-        width: 148.5pt;
-        height: 37.5pt;
+        width: 156pt;
+        height: 54pt;
         margin-bottom: 0;
     }
 
@@ -113,6 +115,5 @@ li a {
     }
 }
 
-@media only screen and (max-width: 375px) {}
 
-@media only screen and (max-width: 320px) {}
+
