--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -198,10 +198,10 @@ img {
 }
 
 .feature-item-title {
-    width: auto;
+    width: 300px;
     color: #000000;
     font-family: 'Montserrat';
-    font-size: 32px;
+    font-size: 36px;
     font-weight: 600;
     line-height: 44px;
     margin-top: 34px;
@@ -214,7 +214,7 @@ img {
     font-size: 18px;
     line-height: 24px;
     margin-top: 16px;
-    text-align: justify;
+    text-align: center;
 }
 /* Screenshot Details */
 
@@ -954,7 +954,7 @@ i {
         margin-bottom: 0;
         margin-left:auto;
         margin-right:auto;
-        text-align:left;
+        text-align:center;
         width:239pt;
     }
 
@@ -964,7 +964,7 @@ i {
         line-height: 24pt;
         margin-top: 16pt;
         margin-bottom: 0;
-        text-align:left;
+        text-align:center;
     }
 
     /* Screenshot Details */
@@ -1158,6 +1158,7 @@ i {
     #footer-logo {
         width:201pt;
         height:66pt;
+        margin-right:60px
     }
     #divider{
         display:none;
@@ -1326,5 +1327,17 @@ i {
     #slideshow-container {
         margin-top: 24pt;
         width: 310px;
+    }
+     /* footer adjustments */
+    
+    #footer-logo {
+        margin-right:20px
+    }
+
+    .media-links{
+        font-size:12pt;
+    }
+    #address-details{
+        font-size:12pt;
     }
 }
