--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,26 +1,26 @@
 .slide-image{
-    width:475px;
-    height:356px;
+    width:627px;
+    height:362px;
 }
 
 @media only screen and (max-width: 414px) {
     .slide-image {
-        width: 390px;
-        height: 356px;
+        width: 288pt;
+        height: 175pt;
     }
 }
 
 @media only screen and (max-width: 375px) {
      .slide-image {
-         width: 360px;
-         height: 356px;
+        width: 248pt;
+        height:143pt;
      }
 
 }
 
 @media only screen and (max-width: 320px) {
     .slide-image {
-        width: 310px;
-        height: 356px;
+        width: 208pt;
+        height: 120pt;
     }
 }
